# Proj2_FermModel_Team01

./: CHANGELOG.md  LICENSE  README.md  connector_tests.ipynb  demo.ipynb  energy_tests.ipynb  model.ipynb  process_tests.ipynb  pyproject.toml  test.ipynb  test.py
docs/: README.md  _config.yml  api-reference.md  best-practices.md  connector-systems.md  examples.md  facility-system.md  getting-started.md  index.md  process-systems.md  pump-system.md  troubleshooting.md
systems/: connectors.py  facility.py  process.py  processes.py  processors.py
