[project]
name = "EthanolPlantModel"
version = "0.5.2"
authors = [
    { name = "Advay  Ramesh Chandra", email = "chand289@purdue.edu" },
    { name = "Karley Jo Hammond", email = "hammon88@purdue.edu" },
    { name = "Samuel Miles Razor", email = "razor@purdue.edu" },
    { name = "Kathering Elizabeth Hampton", email = "hampto64@purdue.edu" }
]
description = "A model for an ethanol plant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "pygobject",
]

[project.urls]
Homepage = "https://github.com/ENGR161-Team1/EthanolPlantModel"